# CPP_Simple_Logger

./: .gitignore  CMakeLists.txt
include/: cppsl.h
src/: CMakeLists.txt  cppsl.cpp  cppsl.h
test/unit/: CMakeLists.txt  cppsl_ut.cpp
